--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
 	<title>Caesar's coso</title>
 </head>
 <body>
-	<%= yield %>
+	<h1> 	<%= @title %> </h1>
+	<p>		<%= yield %>	</p>
 </body>
 </html>
