--- a/public/style.css
+++ b/public/style.css
@@ -19,11 +19,10 @@ a         {text-decoration:none;color:#888}
 table, form
             {color:#c00; border: 2px solid black; 
 		        padding:10px; background-color:#333530;
-            position:relative; top:120px;
-            display:block; width:550px; margin: 0 auto;
+            display:block; width:550px;
             }
             
-form    {width:200px;}
+form    {width:400px;}
 
 input[type="number"] {width:35px;}
 
