--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,4 @@
-<h1>Hey there</h1>
+<form action="/" method="post">
+	<input type="text" name="text" size="20">
+	<input type="submit" value="Submit">
+</form>
