--- a/public/style.css
+++ b/public/style.css
@@ -1,18 +1,20 @@
-body	    {background-color:#272822; font-size:1em; color:#aaa; max-width:600px;
+body	    {margin-left:20px;background-color:#272822; font-size:1em; color:#ccc; max-width:600px;
           font-family:Lato; font-weight:300;}
 
-h1        {font-weight:300; font-size:2em; margin:5px 0 -10px 20px;}
+h1        {font-weight:300; font-size:2.5em; margin:5px 0 -10px 20px;}
 
-p         {margin-left:20px;margin-top:100px;}
+p         {position:static;display:block;}
 
 #topBar, #bottomBar
-          {width:100%; position:absolute;
+          {width:100%; position:fixed; 
           background-color:#373832; color:#ccc; box-shadow: 0 0 10px red;} 
 
-#topBar   {top:0px; left:0px; height:80px;}
+#topBar   {top:0px; left:0px; height:80px;margin-bottom:100px;}
 
 #bottomBar{height:1px; bottom:0px;left:0px; margin:0; padding-bottom:20px;
-          text-align:center;font-size:0.8em; }   
+          text-align:center;font-size:0.8em; }
+
+#content  {margin-top:100px;}             
 
 a         {text-decoration:none;color:#888}
 
