--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,8 +5,11 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-	<div id="topBar"> <h1> 	<%= @title %> </h1> </div>
-	<p>		<%= yield %>	</p>
+	<div id="topBar"> 	
+		<h1> 	<%= @title %> </h1> 
+		<p> 	<%= @comment %> </p>
+	</div>
+	<div id="content"> 	<%= yield %> </div>
 	<div id="bottomBar">created by <a href="https://github.com/Salomanuel">Salomanuel</a></div>
 </body>
 </html>
