--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,11 @@
 		<h1> 	<%= @title %> </h1> 
 		<p> 	<%= @comment %> </p>
 	</div>
-	<div id="content"> 	<%= yield %> </div>
+	<div id="content">
+		<p>In cryptography, a Caesar cipher, also known as Caesar's cipher, the shift cipher, Caesar's code or Caesar shift, is one of the simplest and most widely known encryption techniques. It is a type of substitution cipher in which each letter in the plaintext is replaced by a letter some fixed number of positions down the alphabet. For example, with a left shift of 3, D would be replaced by A, E would become B, and so on. The method is named after Julius Caesar, who used it in his private correspondence.</p>
+		<p>Thanks to the wonders of current technology, you can play with it here: </p>
+	 	<%= yield %> 
+ 	</div>
 	<div id="bottomBar">created by <a href="https://github.com/Salomanuel">Salomanuel</a></div>
 </body>
 </html>
